rs/ethexe/tests/snapshots/service_insta__works_with_events.snap
---
source: tests/service_insta.rs
expression: result
---
impl MyServiceWithEvents {
    pub fn do_this(&mut self) -> u32 {
        42
    }
    pub fn this(&self) -> bool {
        true
    }
}
pub struct MyServiceWithEventsExposure<T: sails_rs::gstd::services::Service> {
    message_id: sails_rs::MessageId,
    route: &'static [u8],
    #[cfg(not(target_arch = "wasm32"))]
    inner: Box<T>,
    #[cfg(not(target_arch = "wasm32"))]
    inner_ptr: *const T,
    #[cfg(target_arch = "wasm32")]
    inner: T,
    base: T::BaseExposures,
}
impl<T: sails_rs::gstd::services::Service> sails_rs::gstd::services::Exposure
for MyServiceWithEventsExposure<T> {
    fn message_id(&self) -> sails_rs::MessageId {
        self.message_id
    }
    fn route(&self) -> &'static [u8] {
        self.route
    }
}
impl MyServiceWithEventsExposure<MyServiceWithEvents> {
    pub fn do_this(&mut self) -> u32 {
        let exposure_scope = sails_rs::gstd::services::ExposureCallScope::new(self);
        self.inner.do_this()
    }
    pub fn this(&self) -> bool {
        let exposure_scope = sails_rs::gstd::services::ExposureCallScope::new(self);
        self.inner.this()
    }
    pub async fn try_handle(&mut self, input: &[u8]) -> Option<(Vec<u8>, u128)> {
        use sails_rs::gstd::InvocationIo;
        if let Ok(request) = my_service_with_events_meta::__DoThisParams::decode_params(
            input,
        ) {
            let result = self.do_this();
            let value = 0u128;
            let output = my_service_with_events_meta::__DoThisParams::encode_reply(
                &result,
            );
            return Some((output, value));
        }
        if let Ok(request) = my_service_with_events_meta::__ThisParams::decode_params(
            input,
        ) {
            let result = self.this();
            let value = 0u128;
            let output = my_service_with_events_meta::__ThisParams::encode_reply(
                &result,
            );
            return Some((output, value));
        }
        None
    }
    pub async fn try_handle_solidity(
        &mut self,
        method: &[u8],
        input: &[u8],
    ) -> Option<(Vec<u8>, u128)> {
        if method == &[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8] {
            let (): () = sails_rs::alloy_sol_types::SolValue::abi_decode_params(
                    input,
                    false,
                )
                .ok()?;
            let result = self.do_this();
            let value = 0u128;
            return Some((
                sails_rs::alloy_sol_types::SolValue::abi_encode(&result),
                value,
            ));
        }
        if method == &[16u8, 84u8, 104u8, 105u8, 115u8] {
            let (): () = sails_rs::alloy_sol_types::SolValue::abi_decode_params(
                    input,
                    false,
                )
                .ok()?;
            let result = self.this();
            let value = 0u128;
            return Some((
                sails_rs::alloy_sol_types::SolValue::abi_encode(&result),
                value,
            ));
        }
        None
    }
}
impl sails_rs::gstd::services::Service for MyServiceWithEvents {
    type Exposure = MyServiceWithEventsExposure<Self>;
    type BaseExposures = ();
    fn expose(
        self,
        message_id: sails_rs::MessageId,
        route: &'static [u8],
    ) -> Self::Exposure {
        #[cfg(not(target_arch = "wasm32"))]
        let inner_box = Box::new(self);
        #[cfg(not(target_arch = "wasm32"))]
        let inner = inner_box.as_ref();
        #[cfg(target_arch = "wasm32")]
        let inner = &self;
        Self::Exposure {
            message_id,
            route,
            base: (),
            #[cfg(not(target_arch = "wasm32"))]
            inner_ptr: inner_box.as_ref() as *const Self,
            #[cfg(not(target_arch = "wasm32"))]
            inner: inner_box,
            #[cfg(target_arch = "wasm32")]
            inner: self,
        }
    }
}
#[cfg(not(target_arch = "wasm32"))]
impl<T: sails_rs::gstd::services::ServiceWithEvents> MyServiceWithEventsExposure<T> {
    pub fn listen(&self) -> impl sails_rs::futures::Stream<Item = T::Events> {
        if core::mem::size_of_val(self.inner.as_ref()) == 0 {
            panic!(
                "setting event listener on a zero-sized service is not supported for now"
            );
        }
        let service_ptr = self.inner_ptr as usize;
        let (tx, rx) = sails_rs::async_channel::unbounded::<T::Events>();
        let mut map = <T as sails_rs::gstd::services::ServiceWithEvents>::event_senders();
        map.insert(service_ptr, tx);
        rx
    }
}
#[cfg(not(target_arch = "wasm32"))]
impl<T: sails_rs::gstd::services::Service> Drop for MyServiceWithEventsExposure<T> {
    fn drop(&mut self) {
        let service_ptr = self.inner_ptr as usize;
        let mut map = MY_SERVICE_WITH_EVENTS_SENDER_MAP.lock();
        if let Some(tx) = map.remove(&service_ptr) {
            tx.close();
        }
    }
}
impl MyServiceWithEvents {
    fn notify_on(&mut self, event: MyEvents) -> sails_rs::errors::Result<()> {
        #[cfg(not(target_arch = "wasm32"))]
        { sails_rs::gstd::services::ServiceWithEvents::notify_on(self, event) }
        #[cfg(target_arch = "wasm32")] { sails_rs::gstd::events::__notify_on(event) }
    }
}
#[cfg(not(target_arch = "wasm32"))]
static MY_SERVICE_WITH_EVENTS_SENDER_MAP: sails_rs::spin::Mutex<
    sails_rs::collections::BTreeMap<usize, sails_rs::async_channel::Sender<MyEvents>>,
> = sails_rs::spin::Mutex::new(sails_rs::collections::BTreeMap::new());
#[cfg(not(target_arch = "wasm32"))]
impl sails_rs::gstd::services::ServiceWithEvents for MyServiceWithEvents {
    type Events = MyEvents;
    fn event_senders() -> impl core::ops::DerefMut<
        Target = sails_rs::collections::BTreeMap<
            usize,
            sails_rs::async_channel::Sender<Self::Events>,
        >,
    > {
        MY_SERVICE_WITH_EVENTS_SENDER_MAP.lock()
    }
}
impl sails_rs::meta::ServiceMeta for MyServiceWithEvents {
    type CommandsMeta = my_service_with_events_meta::CommandsMeta;
    type QueriesMeta = my_service_with_events_meta::QueriesMeta;
    type EventsMeta = my_service_with_events_meta::EventsMeta;
    const BASE_SERVICES: &'static [sails_rs::meta::AnyServiceMetaFn] = &[];
}
mod my_service_with_events_meta {
    use super::*;
    use sails_rs::{Decode, TypeInfo};
    #[derive(Decode, TypeInfo)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub struct __DoThisParams {}
    impl sails_rs::gstd::InvocationIo for __DoThisParams {
        const ROUTE: &'static [u8] = &[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8];
        type Params = Self;
    }
    #[derive(Decode, TypeInfo)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub struct __ThisParams {}
    impl sails_rs::gstd::InvocationIo for __ThisParams {
        const ROUTE: &'static [u8] = &[16u8, 84u8, 104u8, 105u8, 115u8];
        type Params = Self;
    }
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum QueriesMeta {
        This(__ThisParams, bool),
    }
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum NoEvents {}
    pub type EventsMeta = MyEvents;
}
impl sails_rs::solidity::ServiceSignature for MyServiceWithEvents {
    const METHODS: &'static [sails_rs::solidity::MethodRoute] = &[
        (
            sails_rs::concatcp!(
                "do_this", << (u128,) as sails_rs::alloy_sol_types::SolValue > ::SolType
                as sails_rs::alloy_sol_types::SolType > ::SOL_NAME,
            ),
            &[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8] as &[u8],
        ),
        (
            sails_rs::concatcp!(
                "this", << (u128,) as sails_rs::alloy_sol_types::SolValue > ::SolType as
                sails_rs::alloy_sol_types::SolType > ::SOL_NAME,
            ),
            &[16u8, 84u8, 104u8, 105u8, 115u8] as &[u8],
        ),
    ];
}
